fram of piece fit algorithm

--- a/pazzfit/pazzfit_log.html
+++ b/pazzfit/pazzfit_log.html
@@ -22,92 +22,77 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>pazzfit Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2017/8/9 16:26:08</p>
+<p class="info">2017/8/15 19:21:55</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x64)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
 <p class="debug">FileMonitor マネージャーを初期化しました。</p>
-<p class="debug">BinaryReader &quot;C:/Users/syken-admin/Desktop/procon28_kyogi/pazzfit/Engine/config.ini&quot; をオープンしました。サイズ: 186B</p>
-<p class="debug">TextReader &quot;C:/Users/syken-admin/Desktop/procon28_kyogi/pazzfit/Engine/config.ini&quot; をオープンしました。サイズ: 186B, エンコーディング: UTF-8, BOM: あり</p>
+<p class="debug">BinaryReader &quot;C:/Users/智也/procon28_kyogi/pazzfit/Engine/config.ini&quot; をオープンしました。サイズ: 186B</p>
+<p class="debug">TextReader &quot;C:/Users/智也/procon28_kyogi/pazzfit/Engine/config.ini&quot; をオープンしました。サイズ: 186B, エンコーディング: UTF-8, BOM: あり</p>
 <p class="debug">INIReader &quot;Engine/config.ini&quot; をロードしました。</p>
-<p class="debug">BinaryReader &quot;C:/Users/syken-admin/Desktop/procon28_kyogi/pazzfit/Engine/config.ini&quot; をクローズしました。</p>
-<p class="debug">TextReader &quot;C:/Users/syken-admin/Desktop/procon28_kyogi/pazzfit/Engine/config.ini&quot; をクローズしました。</p>
+<p class="debug">BinaryReader &quot;C:/Users/智也/procon28_kyogi/pazzfit/Engine/config.ini&quot; をクローズしました。</p>
+<p class="debug">TextReader &quot;C:/Users/智也/procon28_kyogi/pazzfit/Engine/config.ini&quot; をクローズしました。</p>
 <p class="info">SSE3/SSE4.1/SSE4.2 をサポート</p>
+<p class="info">AVX2 をサポート</p>
 <p class="debug">BinaryReader &quot;/101&quot; をロードしました。サイズ: 50.3KiB</p>
-<p class="info">AVX をサポート</p>
 <p class="debug">GDI+ を初期化しました。</p>
 <p class="debug">Media Foundation を初期化しました。</p>
 <p class="info">MP3 デコーダーは libmpg123 を使用します。</p>
 <p class="debug">MP3 デコーダーを初期化しました。</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
 <p class="debug">BinaryReader &quot;/101&quot; をクローズしました。</p>
-<p class="debug">スプラッシュウィンドウを作成しました。</p>
-<p class="info">ペンタブの筆圧・傾き機能は利用できません。</p>
+<p class="info">Wintab32.dll が無いので、ペンタブは利用できません。</p>
 <p class="info">ゲームパッドを使用できます。最大接続数: 16</p>
-<p class="debug">xinput9_1_0.dll をロードしました。</p>
+<p class="debug">スプラッシュウィンドウを作成しました。</p>
+<p class="debug">xinput1_4.dll をロードしました。</p>
 <p class="info">XInput コントローラーを使用できます。</p>
 <p class="info">マルチタッチには対応していません。</p>
 <p class="debug">入力デバイスを初期化しました。</p>
 <p class="info">Kinect v1 は使用できません。</p>
 <p class="info">Kinect v2 は使用できません。</p>
-<p class="info">サウンドデバイス: スピーカー (Realtek High Definition Audio)</p>
+<p class="info">xaudio2_8.dll をロードしました。</p>
 <p class="debug">Sound[0(null)] を作成しました。</p>
-<p class="debug">XAudio2(2.7) を初期化しました。</p>
+<p class="debug">XAudio2(2.8) を初期化しました。</p>
 <p class="info">d3d11.dll をロードしました。</p>
 <p class="info">グラフィックスアダプター:</p>
-<p class="info">[0] NVIDIA Quadro 2000 (VRAM: 977MiB, System: 0B, Shared: 7.59GiB)</p>
+<p class="info">[0] Intel(R) HD Graphics 5500 (VRAM: 128MiB, System: 0B, Shared: 3.96GiB)</p>
+<p class="info">[1] Microsoft Basic Render Driver (VRAM: 0B, System: 0B, Shared: 3.96GiB)</p>
 <p class="info">デフォルトのグラフィックスアダプターのグラフィックスデバイスを作成します。</p>
 <p class="info">Direct3D 11 driver type: Hardware (feature level: 11_0)</p>
 <p class="debug">利用可能な マルチサンプリング AA タイプ</p>
 <p class="debug">MSAA x1 (quality: 0)</p>
-<p class="debug">MSAA x2 (quality: 2)</p>
-<p class="debug">MSAA x4 (quality: 4)</p>
-<p class="debug">MSAA x8 (quality: 8)</p>
+<p class="debug">MSAA x2 (quality: 0)</p>
+<p class="debug">MSAA x4 (quality: 0)</p>
+<p class="debug">MSAA x8 (quality: 0)</p>
 <p class="debug">--</p>
 <p class="debug">使用する マルチサンプリング AA タイプ</p>
-<p class="debug">MSAA x4 (quality: 4)</p>
-<p class="info">使用するグラフィックスアダプター: NVIDIA Quadro 2000</p>
-<p class="debug">640x480(60 Hz [60000/1000])</p>
-<p class="debug">640x480(75 Hz [75000/1000])</p>
-<p class="debug">720x480(56.25 Hz [56250/1000])</p>
-<p class="debug">720x480(56.25 Hz [56250/1000])Centered</p>
-<p class="debug">720x480(60.317 Hz [60317/1000])</p>
-<p class="debug">720x480(60.317 Hz [60317/1000])Centered</p>
-<p class="debug">720x480(75 Hz [75000/1000])</p>
-<p class="debug">720x480(75 Hz [75000/1000])Centered</p>
-<p class="debug">720x576(56.25 Hz [56250/1000])</p>
-<p class="debug">720x576(56.25 Hz [56250/1000])Centered</p>
-<p class="debug">720x576(60.317 Hz [60317/1000])</p>
-<p class="debug">720x576(60.317 Hz [60317/1000])Centered</p>
-<p class="debug">720x576(75 Hz [75000/1000])</p>
-<p class="debug">720x576(75 Hz [75000/1000])Centered</p>
-<p class="debug">800x600(56.25 Hz [56250/1000])</p>
-<p class="debug">800x600(60.317 Hz [60317/1000])</p>
-<p class="debug">800x600(75 Hz [75000/1000])</p>
-<p class="debug">1024x768(60.004 Hz [60004/1000])</p>
-<p class="debug">1024x768(75.029 Hz [75029/1000])</p>
-<p class="debug">1152x864(75 Hz [75000/1000])</p>
-<p class="debug">1280x720(60 Hz [60000/1000])</p>
-<p class="debug">1280x768(59.81 Hz [59810/1000])</p>
-<p class="debug">1280x768(59.81 Hz [59810/1000])Centered</p>
-<p class="debug">1280x800(59.81 Hz [59810/1000])</p>
-<p class="debug">1280x960(60.02 Hz [60020/1000])</p>
-<p class="debug">1280x960(60.02 Hz [60020/1000])Centered</p>
-<p class="debug">1280x960(75.025 Hz [75025/1000])</p>
-<p class="debug">1280x960(75.025 Hz [75025/1000])Centered</p>
-<p class="debug">1280x1024(60.02 Hz [60020/1000])</p>
-<p class="debug">1280x1024(75.025 Hz [75025/1000])</p>
-<p class="debug">1360x768(59.887 Hz [59887/1000])</p>
-<p class="debug">1360x768(59.887 Hz [59887/1000])Centered</p>
-<p class="debug">1366x768(59.887 Hz [59887/1000])</p>
-<p class="debug">1366x768(59.887 Hz [59887/1000])Centered</p>
-<p class="debug">1400x1050(59.978 Hz [59978/1000])</p>
-<p class="debug">1440x900(59.887 Hz [59887/1000])</p>
-<p class="debug">1600x900(60 Hz [60000/1000])</p>
-<p class="debug">1600x1024(59.954 Hz [59954/1000])</p>
-<p class="debug">1600x1024(59.954 Hz [59954/1000])Centered</p>
-<p class="debug">1680x1050(59.954 Hz [59954/1000])</p>
-<p class="debug">1920x1080(60 Hz [60000/1000])</p>
+<p class="debug">MSAA x4 (quality: 0)</p>
+<p class="info">使用するグラフィックスアダプター: Intel(R) HD Graphics 5500</p>
+<p class="debug">320x200(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">320x200(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">320x240(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">320x240(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">400x300(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">400x300(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">512x384(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">512x384(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">640x400(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">640x400(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">640x480(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">640x480(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">800x600(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">800x600(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1024x768(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">1024x768(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1280x600(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">1280x600(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1280x720(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">1280x720(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1280x768(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">1280x768(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1360x768(60.00472 Hz [76320000/1271900])</p>
+<p class="debug">1360x768(60.00472 Hz [76320000/1271900])Centered</p>
+<p class="debug">1366x768(60.00472 Hz [76320000/1271900])</p>
 <p class="debug">Texture[0(null)] を作成しました。</p>
 <p class="debug">Texture マネージャーを初期化しました。</p>
 <p class="debug">Texture[1] を作成しました。</p>
@@ -263,21 +248,21 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">InputLayout[5] を作成しました。</p>
 <p class="debug">Model[0(null)] を作成しました。</p>
 <p class="debug">モデルマネージャーを初期化しました。</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/umeplus-p-gothic.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/umeplus-p-gothic.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント umeplus-p-gothic: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-thin.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-thin.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-thin: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-light.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-light.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-light: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-regular.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-regular.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-regular: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-medium.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-medium.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-medium: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-bold.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-bold.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-bold: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-heavy.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-heavy.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-heavy: インストールされています</p>
-<p class="debug">フォント &quot;C:\Users\syken-admin\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-black.ttf&quot; をシステムに登録しました。</p>
+<p class="debug">フォント &quot;C:\Users\智也\AppData\LocalLow/Siv3D/20160812/x64/fonts/mplus-1p-black.ttf&quot; をシステムに登録しました。</p>
 <p class="debug">フォント mplus-1p-black: インストールされています</p>
 <p class="debug">Font[0(null)] を作成しました。</p>
 <p class="debug">フォントマネージャーを初期化しました。</p>
@@ -291,10 +276,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <hr width="76%">
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">スプラッシュウィンドウを終了しました。</p>
-<p class="debug">(dynamic texture) (サイズ 1024x256 Format: 41)</p>
-<p class="debug">Texture[13] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent CloseButton</p>
-<p class="debug">Texture[13] を破棄しました。</p>
 <p class="debug">Font[2] を破棄しました。</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
@@ -387,7 +369,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2017/8/9 16:26:16</p>
+<p class="info">2017/8/15 19:21:57</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x64)</p>
